--- a/Starter-project/src/main/resources/application.properties
+++ b/Starter-project/src/main/resources/application.properties
@@ -1,1 +1,22 @@
+spring.jpa.database = POSTGRESQL
+spring.datasource.platform = postgres
+spring.jpa.show-sql = true
+spring.datasource.driver-class-name = org.postgresql.Driver
+
+# parametri za konekciju
+
+spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username = postgres
+spring.datasource.password = postgres
+
+# port
+
+server.port = 8083
+
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+spring.jackson.serialization.fail-on-empty-beans= false
+
 
