--- a/Starter-project/src/main/resources/application.properties
+++ b/Starter-project/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.datasource.password = postgres
 
 server.port = 8083
 
+# properties
+
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
