--- a/Starter-project/pom.xml
+++ b/Starter-project/pom.xml
@@ -15,8 +15,6 @@
 	<description>Starter Project for RVA 2020/2021 Course</description>
 	<properties>
 		<java.version>1.8</java.version>
-  <sonar.organization>rva2020-2021</sonar.organization>
-  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -44,6 +42,22 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui -->
+		<dependency>
+   			<groupId>io.springfox</groupId>
+    		<artifactId>springfox-swagger-ui</artifactId>
+    		<version>2.9.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
+		<dependency>
+    	<groupId>io.springfox</groupId>
+    	<artifactId>springfox-swagger2</artifactId>
+    	<version>2.9.2</version>
+		</dependency>
+
+
+		
+		
 	</dependencies>
 
 	<build>
